Estado 2: creación de lista sin orden

--- a/index.html
+++ b/index.html
@@ -10,29 +10,6 @@
     </style>
 </head>
 <body>
-    <script>
-        let nombre = 'Carlos';
-        let edad = 20;
-        let altura = 1.75;
-        let casado = false;
-        document.write(nombre);
-        document.write('<br>');
-        document.write(edad);
-        document.write('<br>');
-        document.write(altura);
-        document.write('<br>');
-        document.write(casado);
-        document.write('<br>');
-        let nombre2;
-        nombre2 = prompt("Digite su nombre");
-        document.write(nombre2);
-        document.write('<br>');
-        let num1 = prompt('Digite número 1');
-        let num2 = prompt('Digite número 2');
-        let resultado =parseInt(num1) + parseInt(num2)
-        document.write(resultado);
-        document.write('<br>');
-    </script>
     <img src = "tenis.webp">
     <table>
         <caption>Contactos de la tienda por áreas</caption>
@@ -62,6 +39,17 @@
             <td>300 000 03 </td>
         </tr>
     </table>
+    <ul>
+        <li>Son cómodos</li>
+        <li>Combinan con todo tipo de ropa</li>
+        <li>no inflaman los pies</li>
+    </ul>
+    <h3>Pasos para elegir tu calzado deportivo:</h3>
+    <ol>
+        <li>¿Qué tipo de actividad vas a realizar?</li>
+        <li>¿Cuánto calzas?</li>
+        <li>¿Qué color te gusta?</li>
+    </ol>
     <p>párrafo 1</p>
     <div style ="color:red">
         <p>párrafo 2</p>
