Estado 3: creación lista ordenada

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <td>300 000 03 </td>
         </tr>
     </table>
+    <h3>Beneficios del calzado deportivo</h3>
     <ul>
         <li>Son cómodos</li>
         <li>Combinan con todo tipo de ropa</li>
@@ -50,17 +51,5 @@
         <li>¿Cuánto calzas?</li>
         <li>¿Qué color te gusta?</li>
     </ol>
-    <p>párrafo 1</p>
-    <div style ="color:red">
-        <p>párrafo 2</p>
-        <h1>Título 1</h1>
-    </div>
-    <div style = "color:blue">
-        <p>párrafo 3</p>
-    </div>
-    <div style="color:rgb(63, 236, 63)">
-        <p>párrafo 4</p>
-    </div>
-    <p>párrafo 5</p>
 </body>
 </html>   
